deleted unnecessary files, added user story and description to readme file

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,7 +22,7 @@
   <div class="container bg-warning text-center">
     <div class="row">
       <div class="col-m-6 mx-auto not-eaten-burgers">
-        <h2>Burgers Available</h2>
+        <h2>Burgers Available on the Menu</h2>
         <div class="list-group">
           {{#each burgers }}
           {{#unless this.devoured}}
